# outlook-tool

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  claude-instructions.md  cli.py  outlook_tool.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: REQUIREMENTS.md
docs/captains_log/: 20260327-2015-bolt2-dlc-calendar.md  20260327-2130-bolt3-security-quality.md
docs/key_findings/: 20260327-1305-outlook-tool-full-review-Staff-Engineer-Panel.md  20260327-1945-multi-folder-search-staff-engineer-panel.md
docs/pm/: BACKLOG.md  CURRENT-SPRINT.md  SPRINT-LOG.md
tests/: test_outlook_tool.py
