[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-tool"
version = "1.0.0"
description = "General-purpose Outlook email client — search, download attachments, and send emails"
requires-python = ">=3.10"
dependencies = [
    "msal>=1.28.0",
    "requests>=2.31.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
outlook-tool = "cli:main"

[tool.setuptools]
py-modules = ["outlook_tool", "cli"]
