[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-tool"
version = "1.3.0"
description = "General-purpose Outlook email & calendar client — search, download attachments, view events, and send emails"
requires-python = ">=3.10"
dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
graph = [
    "msal>=1.28.0",
    "requests>=2.31.0",
]

[project.scripts]
outlook-tool = "cli:main"

[tool.setuptools]
py-modules = ["outlook_tool", "cli"]
